@@ -94,8 +94,6 @@ remote_notif_parse (remote_target *remote,
   return event;
 }
 
-DEFINE_QUEUE_P (notif_client_p);
-
 /* Process notifications in STATE's notification queue one by one.
    EXCEPT is not expected in the queue.  */
 
@@ -103,10 +101,10 @@ void
 remote_notif_process (struct remote_notif_state *state,
 		      struct notif_client *except)
 {
-  while (!QUEUE_is_empty (notif_client_p, state->notif_queue))
+  while (!state->notif_queue.empty ())
     {
-      struct notif_client *nc = QUEUE_deque (notif_client_p,
-					     state->notif_queue);
+      struct notif_client *nc = state->notif_queue.front ();
+      state->notif_queue.pop ();
 
       gdb_assert (nc != except);
 
@@ -167,7 +165,7 @@ handle_notification (struct remote_notif_state *state, char *buf)
 
       /* Notify the event loop there's a stop reply to acknowledge
 	 and that there may be more events to fetch.  */
-      QUEUE_enque (notif_client_p, state->notif_queue, nc);
+      state->notif_queue.push (nc);
       if (target_is_non_stop_p ())
 	{
 	  /* In non-stop, We mark REMOTE_ASYNC_GET_PENDING_EVENTS_TOKEN
@@ -240,8 +238,6 @@ do_notif_event_xfree (void *arg)
 remote_notif_state::remote_notif_state (remote_target *remote_)
   : remote (remote_)
 {
-  notif_queue = QUEUE_alloc (notif_client_p, NULL);
-
   /* Register async_event_handler for notification.  */
 
   get_pending_events_token
@@ -254,8 +250,6 @@ remote_notif_state::remote_notif_state (remote_target *remote_)
 remote_notif_state::~remote_notif_state ()
 {
   int i;
-
-  QUEUE_free (notif_client_p, notif_queue);
 
   /* Unregister async_event_handler for notification.  */
   if (get_pending_events_token != NULL)
